# tot

./: .gitignore  .gitmodules  Makefile  README.md  diagram.puml  notes.txt  pyproject.toml  requirements.txt  run.env
docs/: notes.txt
examples/: repo_tot.toml
src/tot/: __main__.py  cli.py  shared_options.py
src/tot/config/: loader.py  schema.py
src/tot/core/: exec.py  logging.py  paths.py  types.py
src/tot/run/: command.py  service.py  spec.py
src/tot/run/backends/: base.py  docker.py  flatpak.py  host.py
