[project]
name = "tot"
version = "0.1.0"
description = "CLI for NDS development for the practical exercises of Computers"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="AleixMT"}]
license = {text="GPL-3.0-or-later"}
dependencies = [
  "typer[all]>=0.12",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "rich>=13.7",
  "pluggy>=1.5",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
tot = "tot.__main__:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
